@@ -1,23 +1,37 @@
 <search function="yg">
   <name>Yahoo Groups</name>
-  <description>Search yahoo groups for messages or members.  Usage: "yg {groupname} [/messages:string] [/members:name]".  E.g., "yg dqsdd /mes:localpreferences" or "yg dqsdd /mem:carr"</description>
+  <description>
+    Search Yahoo groups for messages or members.
+    <div class="helpboxDescLabels">Switches:</div>
+    <table class="helpboxDescTable">
+      <tr><td>/messages:string</td><td> - </td><td>Search group for messages</td></tr>
+      <tr><td>/members:name</td><td> - </td><td>Search group for member names</td></tr>
+      <tr><td>/number:message_number</td><td> - </td><td>Go directly to a message number</td></tr>
+    </table>
+    <div class="helpboxDescLabels">Examples:</div>
+    <table class="helpboxDescTable">
+      <tr><td>yg wtl /num:610</td></tr>
+      <tr><td>yg dqsdd /mes:localpreferences</td></tr>
+      <tr><td>yg dqsdd /mem:carr</td></tr>
+    </table>
+  </description>
   <category>Search the Web</category>
   <link>http://groups.yahoo.com/</link>
   <contributor>Glenn Carr</contributor>
-    <form name="ygf" action="http://groups.yahoo.com/rsearch" method="get">
-      <input type="hidden" name="type" value="query" />
-      <input type="hidden" name="where" value="" />
-      <input type="hidden" name="group" value="" />
-      <input type="hidden" name="query" value="" />
-      <input type="hidden" name="expand" value="1" />
-    </form>
+  <form name="ygf" action="http://groups.yahoo.com/rsearch" method="get">
+    <input type="hidden" name="type" value="query" />
+    <input type="hidden" name="where" value="" />
+    <input type="hidden" name="group" value="" />
+    <input type="hidden" name="query" value="" />
+    <input type="hidden" name="expand" value="1" />
+  </form>
   <script><![CDATA[
     function yg(q)
     {
       if( nullArgs("yg", q) )
         return false;
 
-      var args = parseArgs(q, "messages, members");
+      var args = parseArgs(q, "messages, members, number");
       if( args.switches.length >= 1 )
       {
         document.ygf.query.value = args.switches[0].value;
@@ -32,6 +46,9 @@
             document.ygf.group.value = "sub";
             submitForm(ygf);
             break;
+          case "number":
+            openSearchWindow("http://groups.yahoo.com/group/" + args.q + "/message/" + args.switch_val["number"]);
+            break;
           default:
             openSearchWindow("http://groups.yahoo.com/");
         }
@@ -44,8 +61,8 @@
   ]]></script>
 
   <copyright>
-	Copyright (c) 2002 David Bau
-	Distributed under the terms of the
-	GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)
+    Copyright (c) 2002 David Bau
+    Distributed under the terms of the
+    GNU Public License, Version 2 (http://www.gnu.org/copyleft/gpl.txt)
   </copyright>
 </search>
